Fix container 2 alignment

--- a/styles.css
+++ b/styles.css
@@ -141,6 +141,7 @@ body {
     display: flex;
     justify-content: end;
     padding-right: 275px;
+    margin-bottom: 75px;
 }
 
 .miniSignup {
